[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Pigeon/Idle/kaltka0000.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Goose.gd" type="Script" id=2]
[ext_resource path="res://assets/GooseAnimation/klatka_2.PNG" type="Texture" id=3]
[ext_resource path="res://assets/GooseAnimation/klatka_1.PNG" type="Texture" id=4]
[ext_resource path="res://assets/GooseAnimation/klatka_4.PNG" type="Texture" id=5]
[ext_resource path="res://assets/GooseAnimation/klatka_3.PNG" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.6196, 57.0505 )

[sub_resource type="CircleShape2D" id=3]
radius = 211.266

[node name="RigidBody2D" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -130.108 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="kaltka0000" type="Sprite" parent="."]
visible = false
modulate = Color( 0.972549, 0.992157, 0.329412, 1 )
position = Vector2( -5.23367, -70.837 )
scale = Vector2( 0.521498, 0.521498 )
texture = ExtResource( 1 )

[node name="WorldCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8.41634, -58.9293 )
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -0.44545, -125.364 )
shape = SubResource( 3 )

[node name="runningAwayTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="runningAwayTimer" to="." method="_on_runningAwayTimer_timeout"]
